# learn-pytest-pom

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
page/: base_page.py  login_page.py
pages/: base_page.py  login_page.py
test_case/: conftest.py  test_login.py
tests/base/: test_login.py
tests/models/: login.py
